--- a/css/style.css
+++ b/css/style.css
@@ -222,22 +222,27 @@ td { vertical-align: top; }
 body {
 	font-family: Georgia;
 	overflow: hidden;
+	background: #333333;
+	height: 100%;
 }
 
 div[role='main'] {
+	position: relative;
 	margin: 0px auto;
-	width: 1280px;
-	height:1000px;
+	max-width: 1280px;
+	min-height: 620px;
 }
 
-/*51626F*/
-body.rand1 div[role='main'] { background: #343434 url('../img/background1.jpg') no-repeat; }
-body.rand2 div[role='main'] { background: #343434 url('../img/background2.jpg') no-repeat; }
-body.rand3 div[role='main'] { background: #343434 url('../img/background3.jpg') no-repeat; }
-body.rand4 div[role='main'] { background: #343434 url('../img/background4.jpg') no-repeat; }
+#bg {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	z-index: -1;
+	width: 100%;
+}
 
 .box {
-	position: fixed;
+	position: relative;
 }
 
 .box .header {
@@ -268,9 +273,11 @@ h1 {
 }
 
 .sidebox {
+	position: absolute;
 	width: 160px;
 	height: 150px;
-	left: 210px;
+	left: 16%;
+	z-index: 1;
 }
 
 .sidebox .header {
@@ -283,10 +290,13 @@ h1 {
 }
 
 .mainbox {
-	width: 680px;
-	left: 390px;
+	position: absolute;
 	top: 340px;
-	bottom: 80px;
+	left: 16%;
+	right: 16%;
+	padding-left: 170px;
+	bottom: 0px;
+	z-index: 0;
 }
 
 .mainbox .header {
@@ -338,7 +348,7 @@ footer li.first:before {
 	content: "";
 }
 
-footer a {
+footer a,footer a:hover,footer a:visited {
 	color: white;
 	text-decoration: none;
 }
