Added bold highlighting of selected filters.

--- a/css/style.css
+++ b/css/style.css
@@ -469,6 +469,10 @@ h3 {
 	position: relative;
 }
 
+.selected {
+	font-weight: bold;
+}
+
 
 
 /* ==|== media queries ======================================================
