--- a/css/style.css
+++ b/css/style.css
@@ -479,6 +479,9 @@ h3 {
 	font-weight: bold;
 }
 
+.mainbox.full .homepage-only {
+	display: none;
+}
 
 
 /* ==|== media queries ======================================================
