Added arrow icons.

--- a/css/style.css
+++ b/css/style.css
@@ -491,6 +491,10 @@ h3 {
 	display: none;
 }
 
+#view-all {
+	line-height: 100%;
+}
+
 
 /* ==|== media queries ======================================================
    EXAMPLE Media Query for Responsive Design.
