--- a/css/style.css
+++ b/css/style.css
@@ -418,6 +418,11 @@ table.ui-datepicker-calendar {
 	padding-top: 0px;
 }
 
+.ui-datepicker-today a {
+	background-color: #aaaaff;
+	color: 000;
+}
+
 ul#org,ul#place {
 	margin:0 0 0 1em;
 	text-indent:-1em;
