--- a/css/style.css
+++ b/css/style.css
@@ -258,6 +258,7 @@ h1 {
 	display: inline;
 	padding: 6px;
 	font-size: 2.0em;
+	line-height: 65px;
 }
 
 .mainbox .right {
@@ -305,7 +306,7 @@ h1 {
 }
 
 .mainbox .header {
-	height: 40px;
+	height: 65px;
 }
 
 .mainbox .content {
