--- a/css/style.css
+++ b/css/style.css
@@ -369,7 +369,7 @@ h1 {
 footer {
 	width: 100%;
 	text-align: center;
-	position: absolute;
+	position: fixed;
 	bottom: 0px;
 	color: white;
 	font-size: 0.8em;
