Corrected positioning of 'view all events' and 'back to homepage' graphic and text under IE7.  Fixes #12.

--- a/css/style.css
+++ b/css/style.css
@@ -585,9 +585,14 @@ h3 {
 }
 
 #view-all {
+	position: relative;
 	padding: 5px;
 	line-height: 100%;
 	cursor: pointer;
+}
+
+.lt-ie8 #view-all {
+	bottom: 63px;
 }
 
 #view-all img {
